# wallet_gui_for_sn

./: .gitignore  LICENSE  readme.md
src/: app.css  backup.js  index.html  main.js  nav.js  qrcode.js  receive.js  save.js  send.js  styles.css  wallet.js  wallets.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/transfers/: error.rs  mod.rs  transfer.rs
