[package]
name = "wallet"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-write-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

argon2 = "0.5.0"
bip39 = "2.0.0"
bls_ckd = "0.2.0"
aes-gcm-siv = "0.11.1"
curv-kzen = { version = "0.10", default-features = false, features = [] }
hex = "0.4.3"
rand = "0.8.5"
rmp-serde = "1.1.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
